testcrate/ui/borrowed-argument.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/borrowed-argument.rs:14:17
   |
14 |     await!(bar(&a))?;
   |                 ^ does not live long enough
...
17 | }
   | - borrowed value only lives until here
   |
note: borrowed value must be valid for the lifetime '__returned_future as defined on the function body at 13:1...
  --> $DIR/borrowed-argument.rs:13:1
   |
13 | / fn foo(a: String) -> Result<i32, u32> {
14 | |     await!(bar(&a))?;
15 | |     drop(a);
16 | |     Ok(1)
17 | | }
   | |_^

error[E0597]: `a` does not live long enough
  --> $DIR/borrowed-argument.rs:21:37
   |
21 |     yield do catch { Ok(await!(bar(&a))?) };
   |                                     ^ does not live long enough
...
24 | }
   | - borrowed value only lives until here
   |
note: borrowed value must be valid for the lifetime '__returned_stream as defined on the function body at 20:1...
  --> $DIR/borrowed-argument.rs:20:1
   |
20 | / fn foos(a: String) -> impl Stream<Item = i32, Error = u32> {
21 | |     yield do catch { Ok(await!(bar(&a))?) };
22 | |     drop(a);
23 | |     yield Ok(5);
24 | | }
   | |_^

error: aborting due to 2 previous errors

